<resources>
    <string name="app_name">My Messaging App V 2.0</string>
    <string name="music_act_name">Play Music</string>
    <string name="hello_world">Welcome to Messaging page!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">MessageActivity</string>
    <string-array name="contacts">
        <item>Larry Page</item>
        <item>Sergey Brin</item>
        <item>Eric Schmidt</item>
        <item>Andy Rubin</item>
        <item>James Gosling</item>
        <item>Anders Hejlsberg </item>
        <item>Bjarne Stroustrup</item>
    </string-array>

    <string name="music_act_btn">Move to Music</string>
    <string name="music_start_btn">Start Service</string>
    <string name="music_stop_btn">Stop Service</string>

    <string name="music1">\"Aoharu\"</string>
    <string name="music2">Default Ringtone</string>
    <string name="music1_desc">\"Aoharu\" from Blue Archive</string>
    <string name="music2_desc">Default ringtone of your device</string>
    <string name="copy_right_claim">&#169;Copyright 2021. NEXON Games Co., Ltd and YoStar, Inc. All rights reserved.</string>

</resources>